--- a/production/package.json
+++ b/production/package.json
@@ -8,8 +8,9 @@
     "start": "HTTPS=true react-scripts start",
     "start:windows": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --silent --noStackTrace",
+    "test": "react-scripts test ",
     "test:debug": "react-scripts test --debug",
+    "coverage": "CI=true react-scripts test  --silent --coverage --noStackTrace --forceExit",
     "test:coverage": "CI=true react-scripts test  --silent --coverage --noStackTrace --forceExit --ci --json --outputFile=./coverage/test-results.json",
     "eject": "react-scripts eject",
     "eslint": "eslint ./src --ext .js,.jsx --max-warnings=0",
@@ -113,7 +114,7 @@
       "!src/navigation/**/*.*",
       "!src/office/format/*.*",
       "!src/office/api/*.*",
-      "!src/office/table/*.*",
+      "src/office/table/*.*",
       "!src/office/import/*.*"
     ]
   }
