--- a/production/package.json
+++ b/production/package.json
@@ -34,6 +34,7 @@
     "focus-visible": "^5.0.2",
     "i18next": "^17.3.1",
     "is-plain-object": "^3.0.0",
+    "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "proxy-polyfill": "^0.3.0",
