--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,8 @@ celerybeat.pid
 .venv
 env/
 venv/
+venv_mac/
+venv_win/
 ENV/
 env.bak/
 venv.bak/
@@ -127,3 +129,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# IntelliJ, PyCharm
+.idea
+*.iml
+
+# images used for image recognition
+screenshots/*.png
