excluded popup assets from coverage

--- a/production/package.json
+++ b/production/package.json
@@ -113,6 +113,7 @@
       "!src/office/api/*.*",
       "!src/office/table/*.*",
       "!src/office/import/*.*",
+      "!src/popup/assets/*.*",
       "!src/redux-reducer/*.*"
     ]
   }
