--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,9 @@
 {
   "driver_type": "windows_desktop",
   "image_recognition_enabled": true,
-  "connect_to_open_excel_enabled": false,
+  "connect_to_existing_session_enabled": false,
+  "browser_existing_session_executor_url": "",
+  "browser_existing_session_id": "",
   "cleanup_after_test_enabled": true,
   "driver_path_windows_desktop": "C:\\Program Files (x86)\\Microsoft Office\\root\\Office16\\EXCEL.EXE",
   "driver_path_windows_chrome": "resources\\chromedriver83.exe",
@@ -9,6 +11,7 @@
   "host_url_mac_desktop": "http://localhost:4622/wd/hub",
   "host_url_windows_desktop": "http://localhost:4723/wd/hub",
   "excel_add_in_environment": "190209",
+  "excel_desktop_add_in_import_data_name": "Import Data",
   "excel_user_name": "testing.universal@mstrtesting.onmicrosoft.com",
   "excel_user_password": "somePassword1"
 }
