--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
   "host_url_mac_desktop": "http://localhost:4622/wd/hub",
   "host_url_windows_desktop": "http://localhost:4723/wd/hub",
   "excel_add_in_environment": "190209",
-  "excel_desktop_add_in_import_data_name": "Import Data",
+  "excel_desktop_add_in_import_data_name": "env-190209",
   "excel_user_name": "testing.universal@mstrtesting.onmicrosoft.com",
   "excel_user_password": "somePassword1"
 }
