--- a/tests/integration/python/.gitignore
+++ b/tests/integration/python/.gitignore
@@ -136,3 +136,6 @@ dmypy.json
 
 # images used for image recognition
 framework/screenshots/*.png
+
+# framework's configuration
+framework/config.json
