--- a/tests/integration/python/framework/config/config.json.DIST
+++ b/tests/integration/python/framework/config/config.json.DIST
@@ -6,6 +6,7 @@
   "browser_existing_session_id": "",
   "windows_desktop_excel_root_element_name": "Book1 - Excel",
   "cleanup_after_test_enabled": true,
+  "run_win_app_driver_enabled": false,
   "driver_path_windows_desktop": "C:\\Program Files (x86)\\Microsoft Office\\root\\Office16\\EXCEL.EXE",
   "driver_path_windows_chrome": "framework\\resources\\chromedriver83.exe",
   "driver_path_mac_chrome": "framework/resources/chromedriver83",
