--- a/tests/integration/python/framework/config/config.json.DIST
+++ b/tests/integration/python/framework/config/config.json.DIST
@@ -15,7 +15,5 @@
   "excel_add_in_environment": "221120",
   "excel_desktop_add_in_import_data_name": "env-221120",
   "excel_add_in_environment_default_user_name": "a",
-  "excel_add_in_environment_default_password": "",
-  "excel_user_name": "testing.universal@mstrtesting.onmicrosoft.com",
-  "excel_user_password": "somePassword1"
+  "excel_add_in_environment_default_password": ""
 }
