--- a/tests/integration/python/framework/config/config.json.DIST
+++ b/tests/integration/python/framework/config/config.json.DIST
@@ -8,6 +8,7 @@
   "max_test_retry_attempts": 2,
   "cleanup_after_test_enabled": true,
   "run_win_app_driver_enabled": false,
+  "run_appium_for_mac_enabled": false,
   "driver_path_windows_desktop": "C:\\Program Files (x86)\\Microsoft Office\\root\\Office16\\EXCEL.EXE",
   "driver_path_windows_chrome": "framework\\resources\\chromedriver85_win32.exe",
   "driver_path_mac_chrome": "framework/resources/chromedriver83",
