--- a/tests/integration/python/framework/config/config.json.DIST
+++ b/tests/integration/python/framework/config/config.json.DIST
@@ -1,6 +1,7 @@
 {
   "driver_type": "windows_desktop",
   "image_recognition_enabled": true,
+  "image_recognition_screenshots_folder": "framework\\screenshots",
   "connect_to_existing_session_enabled": false,
   "browser_existing_session_executor_url": "",
   "browser_existing_session_id": "",
