--- a/tests/integration/python/framework/config/config.json.DIST
+++ b/tests/integration/python/framework/config/config.json.DIST
@@ -6,7 +6,7 @@
   "browser_existing_session_executor_url": "",
   "browser_existing_session_id": "",
   "windows_desktop_excel_root_element_name": "Book1 - Excel",
-  "max_test_retry_attempts": 2,
+  "max_no_of_test_executions": 2,
   "cleanup_after_test_enabled": true,
   "run_win_app_driver_enabled": false,
   "run_appium_for_mac_enabled": false,
