--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,5 @@ coverage/
 .comparison_report/current/
 .comparison_report/markdown.html
 .eslint/
+tests/integration/python/allure-report*
+tests/integration/python/allureFolder*
