Review. Taking screenshots on test failure added (not only attaching to allure reports), for debug purposes.

--- a/tests/integration/python/framework/config/config.json.DIST
+++ b/tests/integration/python/framework/config/config.json.DIST
@@ -5,6 +5,7 @@
   "connect_to_existing_session_enabled": false,
   "browser_existing_session_executor_url": "",
   "browser_existing_session_id": "",
+  "take_debug_screenshot_after_failure": true,
   "windows_desktop_excel_root_element_name": "Book1 - Excel",
   "max_no_of_test_executions": 2,
   "cleanup_after_test_enabled": true,
