--- a/office-loader/package.json
+++ b/office-loader/package.json
@@ -54,7 +54,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "GENERATE_SOURCEMAP=false node scripts/build.js",
     "build-dev": "node scripts/build-dev.js",
     "test": "node scripts/test.js"
   },
