--- a/tests/integration/e2e-webserver-mac/Dockerfile
+++ b/tests/integration/e2e-webserver-mac/Dockerfile
@@ -7,7 +7,7 @@ COPY server.xml mstr-office.jks tomcat-users.xml  /usr/local/tomcat/conf/
 COPY manager.xml web-dossier.xml /usr/local/tomcat/conf/Catalina/localhost/
 # COPY web-dossier.xml /usr/local/tomcat/conf/Catalina/localhost/web-dossier.xml
 COPY web-dossier.war /usr/local/tomcat/webapps/web-dossier.war
-COPY configOverride.properties office.zip office-loader.zip deploy-webdossier.sh /opt/
+COPY web.xml context.xml configOverride.properties office.zip office-loader.zip deploy-webdossier.sh /opt/
 # COPY deploy-webdossier.sh /opt/deploy-webdossier.sh
 
 RUN apt-get update && apt-get install -y netcat \
