De200994 ; implementing UB testing (#1392)
* Added description for js spec

* Intermediate steps

* Step change

* Correctly added new page

* Added steps for ub performance

* Added descripitons

* Tested step execution by other step

* Step execution multiple times

* Added step to execute step as a parameter

* Started working on manifest file

* Fixed generating manifest file

* Added comments about steps implemetation

* Focus on upload window now works

* Implemented file upload

* Implemented uploading file

* Add-in upload steps

* filters panel steps implementation

* Fixed data import steps

* TC mvp pass

* Timestamps and csv generation

* Timed execution with no error control

* Feature file cleanup

* FIlepath updates

* Updated selctor for add-in

* Revert ub-spec changes

* Add-in upload frame getter update

* Timers file cleanup

* Removed unused from ub page

* Steps file updates

* Added error info to csv

* Removed stashed changes file

* Removed unused steps and added constants for paths

* Timers changes

* Constructor declaration order

--- a/tests/integration/python/.gitignore
+++ b/tests/integration/python/.gitignore
@@ -140,6 +140,9 @@ framework/screenshots/*.png
 # framework's configuration
 framework/config/config.json
 
+#framework's debug data
+framework/debug_data/
+
 # Allure reports
 allure-report
 allureFolder
