--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,6 @@ coverage/
 workspace-settings/bundle/vendor
 tests/integration/python/allure-report*
 tests/integration/python/allureFolder*
+
+# UB benchmarking
+tests/integration/python/framework/resources/ub_benchmarking/modified_manifest.xml
