DE208648; New iserver (#1402)
* $new_iserver$

* DE208648; new iserver update

* rollback

--- a/tests/integration/e2e-webserver-mac/configOverride.properties
+++ b/tests/integration/e2e-webserver-mac/configOverride.properties
@@ -6,7 +6,7 @@
 # 
 
 identityToken.secretKey=SECRET RANDOM KEY
-iserver.default.hostname=TEC-W-1008410.labs.microstrategy.com
+iserver.default.hostname=10.250.145.168
 iserver.default.port=34952
 trustStore.path=/WEB-INF/truststore.pfx
 trustStore.passphrase=mstr123
