--- a/production/package.json
+++ b/production/package.json
@@ -24,52 +24,52 @@
   "dependencies": {
     "@mstr/connector-components": "^0.1.17",
     "@mstr/mstr-react-library": "^1.7.27",
-    "@types/jest": "^25.1.3",
-    "antd": "^3.26.2",
-    "core-js": "^3.5.0",
+    "antd": "^3.26.20",
+    "core-js": "^3.18.0",
     "dexie": "^2.0.4",
-    "dexie-observable": "^1.0.0-beta.5",
-    "focus-visible": "^5.0.2",
+    "dexie-observable": "^1.0.0-beta.8",
+    "focus-visible": "^5.2.0",
     "i18next": "^17.3.1",
     "lodash.throttle": "^4.1.1",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
-    "proxy-polyfill": "^0.3.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "proxy-polyfill": "^0.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-i18next": "^10.13.2",
-    "react-redux": "^7.1.3",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.1",
+    "react-redux": "^7.2.5",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.2",
-    "superagent": "^5.1.2"
+    "superagent": "^5.3.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@mstr/eslint-config-mstr": "^0.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
-    "babel-preset-airbnb": "^4.4.0",
+    "@types/jest": "^25.2.3",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-preset-airbnb": "^4.5.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "i18next-xhr-backend": "^3.2.2",
-    "jest-localstorage-mock": "^2.4.0",
-    "office-addin-debugging": "^3.0.25",
+    "jest-localstorage-mock": "^2.4.18",
+    "office-addin-debugging": "^3.0.42",
     "office-addin-dev-certs": "^1.5.0",
-    "office-addin-manifest": "^1.5.4",
+    "office-addin-manifest": "^1.6.3",
     "redux-mock-store": "^1.5.4",
-    "typescript": "^3.7.3",
-    "webpack-cli": "^3.3.10"
+    "regenerator-runtime": "^0.13.9",
+    "typescript": "^3.9.10",
+    "webpack-cli": "^3.3.12"
   },
   "browserslist": {
     "production": [
@@ -85,6 +85,7 @@
     ]
   },
   "jest": {
+    "resetMocks": false,
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
