US412423;Update connector-components (#1451)
* US412423;Update connector-components

* fix ut

* ut fix

* update cocnnector component

* add babel config

--- a/production/.eslintrc.json
+++ b/production/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": [
     "@mstr/eslint-config-mstr"
   ],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2020
   },
