Update mstr-react-library and .npmrc (#1495)

--- a/production/.npmrc
+++ b/production/.npmrc
@@ -1,3 +1,1 @@
-_auth=${NPM_TOKEN}
-@mstr:registry=https://nexus.internal.microstrategy.com/repository/npm-group/
-registry=https://registry.npmjs.org/
+registry=https://nexus.internal.microstrategy.com/repository/npm-group/
