--- a/production/package.json
+++ b/production/package.json
@@ -26,8 +26,8 @@
     "@mstr/mstr-react-library": "^1.9.0",
     "antd": "^3.26.20",
     "core-js": "^3.18.0",
-    "dexie": "^3.2.2",
-    "dexie-observable": "^3.0.0-beta.11",
+    "dexie": "^4.0.1-alpha.6",
+    "dexie-observable": "^4.0.1-beta.13",
     "focus-visible": "^5.2.0",
     "i18next": "^21.9.0",
     "lodash.throttle": "^4.1.1",
