DE257693;inconsistent language behavior in the office (#1522)
* DE257693;Replace withTransaltion with useTranslation

* Convert navigatoin tree to FC

* fix prop type

* fix eslint issue

* fix types

* remove ant designs icons

* fix eslint semicolon issue

* update vs code settings

* Fix unit tests

* fix eslint issues

* fix UT

* fix eslint & sonarcube

* change deconstructing i18n

* change useEffect import

Co-authored-by: Sedano, Alejandro <asedano@microstrategy.com>

--- a/production/.eslintrc.json
+++ b/production/.eslintrc.json
@@ -33,8 +33,10 @@
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "jsx-quotes": ["warn", "prefer-double"],
     "semi": ["error", "always"],
+    "@typescript-eslint/semi": "error",
     "no-console": "off",
     "no-await-in-loop": "off",
+    "class-methods-use-this": "off",
     "space-before-function-paren": ["error", {
       "anonymous": "always",
       "named": "never",
