--- a/office-loader/package.json
+++ b/office-loader/package.json
@@ -34,9 +34,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "build-dev": "node scripts/build-dev.js",
-    "test": "node scripts/test.js"
+    "build": "node scripts/build.js"
   },
   "browserslist": [
     ">0.2%",
