--- a/production/package.json
+++ b/production/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-react": "^7.18.6",
     "@mstr/eslint-config-mstr": "^0.1.7",
     "@testing-library/react": "^12.1.5",
+    "@types/superagent": "^4.1.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.10.0",
     "enzyme-to-json": "^3.6.2",
