--- a/office-loader/package.json
+++ b/office-loader/package.json
@@ -10,6 +10,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "cross-env": "^7.0.3",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -33,8 +34,8 @@
     "workbox-webpack-plugin": "3.6.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js"
   },
   "browserslist": [
     ">0.2%",
