--- a/production/package.json
+++ b/production/package.json
@@ -50,6 +50,7 @@
     "@testing-library/react": "^12.1.5",
     "@types/superagent": "^4.1.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "antd": "^3.13.1",
     "enzyme": "^3.10.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
