--- a/production/package.json
+++ b/production/package.json
@@ -24,7 +24,6 @@
     "@mstr/mstr-icons": "^2.11.3",
     "@mstr/mstr-react-library": "^1.17.1",
     "@mstr/rc": "^2.22.3",
-    "antd": "^3.26.20",
     "core-js": "^3.18.0",
     "dexie": "^4.0.1-alpha.6",
     "dexie-observable": "^4.0.1-beta.13",
@@ -41,6 +40,7 @@
     "redux": "^4.1.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "resize-observer-polyfill": "^1.5.1",
     "superagent": "^5.3.1"
   },
   "devDependencies": {
@@ -109,7 +109,11 @@
       "!src/office/import/*.*",
       "!src/popup/assets/*.*",
       "!src/redux-reducer/*.*"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^antd/es/(.*)$": "antd/lib/$1",
+      "^lodash-es$": "lodash"
+    }
   },
   "overrides": {
     "antd": "^3.26.20",
