--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,28 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+      {
+        "name": "Launch Edge",
+        "request": "launch",
+        "type": "msedge",
+        "url": "https://www.microsoft365.com/launch/excel?auth=2",
+        "runtimeArgs": [
+          "--ignore-certificate-errors",
+          "--disable-web-security"
+        ], 
+        "webRoot": "${workspaceRoot}/production/src/frontend/app",
+        "sourceMaps": true
+      },
         
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome",
-            "url": "https://localhost:3000/",
+            "name": "Debug Excel Add-in",
+            "url": "https://www.microsoft365.com/launch/excel?auth=2",
+            "runtimeArgs": [
+              "--ignore-certificate-errors",
+              "--disable-web-security"
+            ], 
             "webRoot": "${workspaceRoot}/production/src/frontend/app",
             "sourceMaps": true
         },
