--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,72 +1,56 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+      
       {
-        "name": "Launch Edge",
-        "request": "launch",
-        "type": "msedge",
-        "url": "https://www.microsoft365.com/launch/excel?auth=2",
-        "runtimeArgs": [
-          "--ignore-certificate-errors",
-          "--disable-web-security"
-        ], 
-        "webRoot": "${workspaceRoot}/production/src/frontend/app",
-        "sourceMaps": true
+          "type": "chrome",
+          "request": "launch",
+          "name": "Launch Chrome",
+          "url": "https://localhost:3000/",
+          "webRoot": "${workspaceRoot}/production/src/frontend/app",
+          "sourceMaps": true
       },
-        
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Debug Excel Add-in",
-            "url": "https://www.microsoft365.com/launch/excel?auth=2",
-            "runtimeArgs": [
-              "--ignore-certificate-errors",
-              "--disable-web-security"
-            ], 
-            "webRoot": "${workspaceRoot}/production/src/frontend/app",
-            "sourceMaps": true
-        },
-        {
-            "type": "chrome",
-            "request": "attach",
-            "name": "Attach to Chrome with WebPack",
-            "port": 9222,
-            "webRoot": "${workspaceRoot}/production/src/frontend/app",
-            "sourceMaps": true,
-            "smartStep": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "WebpackDEV",
-            "program": "${workspaceRoot}/production/node_modules/.bin/webpack-dev-server",
-            "args": [
-                "--https",
-                "--port",
-                "3000",
-                "--config",
-                "webpack.config.js"
-            ],
-            "outFiles": [
-                "${workspaceRoot}/production/src/frontend/public/js/*"
-            ],
-            "cwd": "${workspaceFolder}/production",
-            "console": "internalConsole",
-            "sourceMaps": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Jest Tests",
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": "npm",
-            "runtimeArgs": [
-                "run-script", "test-debug"
-            ],
-            "port": 9229
-        },
-    ]
+      {
+          "type": "chrome",
+          "request": "attach",
+          "name": "Attach to Chrome with WebPack",
+          "port": 9222,
+          "webRoot": "${workspaceRoot}/production/src/frontend/app",
+          "sourceMaps": true,
+          "smartStep": true
+      },
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "WebpackDEV",
+          "program": "${workspaceRoot}/production/node_modules/.bin/webpack-dev-server",
+          "args": [
+              "--https",
+              "--port",
+              "3000",
+              "--config",
+              "webpack.config.js"
+          ],
+          "outFiles": [
+              "${workspaceRoot}/production/src/frontend/public/js/*"
+          ],
+          "cwd": "${workspaceFolder}/production",
+          "console": "internalConsole",
+          "sourceMaps": true
+      },
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "Jest Tests",
+          "cwd": "${workspaceFolder}",
+          "runtimeExecutable": "npm",
+          "runtimeArgs": [
+              "run-script", "test-debug"
+          ],
+          "port": 9229
+      },
+  ]
 }
