--- a/production/package.json
+++ b/production/package.json
@@ -20,8 +20,8 @@
     "validate": "office-addin-manifest validate manifest.xml"
   },
   "dependencies": {
-    "@mstr/connector-components": "^3.7.3",
-    "@mstr/mstr-icons": "^2.29.7",
+    "@mstr/connector-components": "^3.7.9",
+    "@mstr/mstr-icons": "^2.29.8",
     "@mstr/mstr-react-library": "^1.17.1",
     "@mstr/rc": "^2.22.3",
     "core-js": "^3.18.0",
@@ -61,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "fake-indexeddb": "^4.0.2",
     "jest-localstorage-mock": "^2.4.18",
     "office-addin-debugging": "^3.0.42",
     "office-addin-dev-certs": "^1.5.0",
@@ -90,6 +91,8 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
+      "!src/__mocks__/**/*.{js,jsx}",
+      "!src/setupFakedIndexedDB.js",
       "!src/_tests_/**/*.{js,jsx}",
       "!src/**/*rest-service.js",
       "!src/error.jsx",
