--- a/production/package.json
+++ b/production/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-react": "^7.18.6",
     "@mstr/eslint-config-mstr": "^0.1.7",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^12.1.5",
     "@types/superagent": "^4.1.16",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
