--- a/office-loader/package.json
+++ b/office-loader/package.json
@@ -4,30 +4,31 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "babel-loader": "8.0.4",
-    "babel-plugin-named-asset-import": "^0.2.2",
-    "babel-preset-react-app": "^5.0.3",
+    "babel-loader": "8.3.0",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^8.0.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "core-js": "^3.35.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "mini-css-extract-plugin": "0.4.3",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "react-dev-utils": "^7.0.1",
+    "react-dev-utils": "^7.0.5",
     "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "1.1.0",
+    "terser-webpack-plugin": "1.4.5",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.9",
+    "webpack": "4.47.0",
+    "webpack-dev-server": "3.11.3",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "^3.0.0",
     "workbox-webpack-plugin": "3.6.2"
@@ -44,7 +45,7 @@
   ],
   "babel": {
     "presets": [
-      "react-app"
+    "react-app"
     ]
   },
   "devDependencies": {
@@ -52,6 +53,13 @@
     "webpack-cli": "^3.1.2"
   },
   "resolutions": {
-    "@babel/traverse": "7.23.2"
+    "minimatch": "^3.0.5",
+    "browserslist": "^4.16.5",
+    "postcss": "^8.4.31",
+    "node-forge": "^1.0.0",
+    "glob-parent": "^5.1.2",
+    "shell-quote": "^1.7.3",
+    "loader-utils": "^1.4.2",
+    "immer": "^9.0.6"
   }
 }
