--- a/production/package.json
+++ b/production/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@mstr/connector-components": "^3.7.19",
     "@mstr/mstr-icons": "^2.30.4",
-    "@mstr/mstr-react-library": "^1.17.1",
+    "@mstr/mstr-react-library": "2.0.0",
     "@mstr/rc": "^2.22.3",
     "core-js": "^3.34.0",
     "focus-visible": "^5.2.0",
@@ -30,8 +30,8 @@
     "lodash.throttle": "^4.1.1",
     "moment": "^2.29.4",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.16.9",
     "react-redux": "^7.2.5",
     "react-scripts": "^5.0.1",
@@ -45,14 +45,11 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-react": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@mstr/eslint-config-mstr": "^0.1.7",
     "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^14.1.2",
     "@types/superagent": "^4.1.16",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "enzyme": "^3.10.0",
-    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-babel": "^5.3.1",
@@ -67,7 +64,7 @@
     "office-addin-manifest": "^1.12.8",
     "redux-mock-store": "^1.5.4",
     "regenerator-runtime": "^0.13.9",
-    "typescript": "^4.5.2",
+    "typescript": "^5.3.3",
     "webpack-cli": "^4.9.2"
   },
   "browserslist": {
@@ -121,6 +118,9 @@
     "axios": "1.6.0",
     "resolve-url-loader": "5.0.0",
     "@adobe/css-tools": "4.3.2",
-    "postcss": "8.4.31"
+    "postcss": "8.4.31",
+    "react-scripts": {
+        "typescript": "5.3.3"
+    }
   }
 }
