fix-eslint-no-shadow-enum

--- a/production/.eslintrc.json
+++ b/production/.eslintrc.json
@@ -45,6 +45,8 @@
     "curly" :["error", "all"],
     "object-curly-newline": ["error", {"multiline": true, "minProperties":4}],
     "no-redeclare": ["error", { "builtinGlobals": false }],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"],
     "import/extensions": [
       "error",
       "always",
