--- a/production/package.json
+++ b/production/package.json
@@ -8,7 +8,7 @@
     "start": "HTTPS=true react-scripts start",
     "start:windows": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --silent --noStackTrace",
+    "test": "jest --silent --noStackTrace",
     "test:debug": "react-scripts test --debug",
     "test:coverage": "CI=true react-scripts test  --silent --coverage --noStackTrace --forceExit --ci --json --outputFile=./coverage/test-results.json",
     "eslint": "eslint ./src --ext .js,.jsx,.ts,.tsx --max-warnings=0",
@@ -20,26 +20,28 @@
     "validate": "office-addin-manifest validate manifest.xml"
   },
   "dependencies": {
-    "@mstr/connector-components": "^4.1.1",
+    "@mstr/connector-components": "^4.2.4",
     "@mstr/mstr-icons": "^2.30.4",
     "@mstr/mstr-react-library": "2.0.0",
-    "@mstr/rc": "^2.22.3",
+    "@mstr/rc": "npm:@mstr/rc@2.42.5",
+    "@mstr/rc-3": "npm:@mstr/rc@3.8.0",
     "core-js": "^3.34.0",
     "focus-visible": "^5.2.0",
-    "i18next": "^21.9.0",
+    "i18next": "23.5.1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.16.9",
+    "react-i18next": "^13.2.2",
     "react-redux": "^7.2.5",
     "react-scripts": "^5.0.1",
     "redux": "^4.1.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
-    "superagent": "^5.3.1"
+    "superagent": "^5.3.1",
+    "ts-jest": "^29.1.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -58,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-localstorage-mock": "^2.4.18",
     "office-addin-debugging": "^5.0.14",
     "office-addin-dev-certs": "^1.12.0",
@@ -80,34 +83,6 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "resetMocks": false,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/_tests_/**/*.{js,jsx}",
-      "!src/**/*rest-service.js",
-      "!src/error.jsx",
-      "!src/index.js",
-      "!src/entry-point/*.*",
-      "!src/serviceWorker.js",
-      "!src/office/office-context.js",
-      "!src/office/store/office-store-service.js",
-      "!src/breadcrumbs/breadcrumbs.jsx",
-      "!src/dossier/embedded-dossier.jsx",
-      "!src/prompts/prompts-window.jsx",
-      "!src/office/office-display-service.js",
-      "!src/navigation/**/*.*",
-      "!src/office/format/*.*",
-      "!src/office/api/*.*",
-      "!src/office/import/*.*",
-      "!src/popup/assets/*.*",
-      "!src/redux-reducer/*.*"
-    ],
-    "moduleNameMapper": {
-      "^antd/es/(.*)$": "antd/lib/$1",
-      "^lodash-es$": "lodash"
-    }
-  },
   "overrides": {
     "antd": "^3.26.20",
     "node-fetch": "2.6.8",
@@ -117,7 +92,7 @@
     "@adobe/css-tools": "4.3.2",
     "postcss": "8.4.31",
     "react-scripts": {
-        "typescript": "5.3.3"
+      "typescript": "5.3.3"
     }
   }
 }
