--- a/production/package.json
+++ b/production/package.json
@@ -40,8 +40,7 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
-    "superagent": "^5.3.1",
-    "ts-jest": "^29.1.2"
+    "superagent": "^5.3.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -67,6 +66,7 @@
     "office-addin-manifest": "^1.12.8",
     "redux-mock-store": "^1.5.4",
     "regenerator-runtime": "^0.13.9",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
     "webpack-cli": "^4.9.2"
   },
