Replace react-scripts in test:coverage

--- a/production/package.json
+++ b/production/package.json
@@ -10,7 +10,7 @@
     "build": "react-scripts build",
     "test": "jest --silent --noStackTrace",
     "test:debug": "react-scripts test --debug",
-    "test:coverage": "CI=true react-scripts test  --silent --coverage --noStackTrace --forceExit --ci --json --outputFile=./coverage/test-results.json",
+    "test:coverage": "CI=true jest --silent --coverage --noStackTrace --forceExit --ci --json --outputFile=./coverage/test-results.json",
     "eslint": "eslint ./src --ext .js,.jsx,.ts,.tsx --max-warnings=0",
     "eslint:json": "eslint ./src --ext .js,.jsx,.ts,.tsx --max-warnings=0 --format json --output-file ./coverage/eslint.json",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
