--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,9 @@
     }
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll": true
-  },
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll": "explicit"
+},
   "editor.formatOnSave": false,
   "editor.detectIndentation": false,
   "editor.insertSpaces": true,
